package com.amazon.ata.music.playlist.service.dynamodb.models;

import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAttribute;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBHashKey;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBRangeKey;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTable;

/**
 * Represents a record in the album_tracks table.
 * album_tracks
 *     asin // partition key, string
 *     track_number // sort key, number
 *     album_name // string
 *     song_title // string
 */
@DynamoDBTable(tableName = "album_tracks")
public class AlbumTrack {
    private String asin;
    private Integer trackNumber;
    private String albumName;
    private String songTitle;

    public AlbumTrack(){}

    @DynamoDBHashKey(attributeName = "asin")
    public String getAsin() {return asin;}

    public void setAsin(String asin) {this.asin = asin;}

    @DynamoDBRangeKey(attributeName = "track_number")
    public Integer getTrackNumber() {return trackNumber;}

    public void setTrackNumber(Integer trackNumber) {this.trackNumber = trackNumber;}

    @DynamoDBAttribute(attributeName = "album_name")
    public String getAlbumName() {return albumName;}

    public void setAlbumName(String albumName) {this.albumName = albumName;}

    @DynamoDBAttribute(attributeName = "song_title")
    public String getSongTitle() {return songTitle;}

    public void setSongTitle(String songTitle) {this.songTitle = songTitle;}

}
